--- a/index.html
+++ b/index.html
@@ -726,7 +726,7 @@
       <div class="container">
         <div class="row">
           <div class="col-12">
-            <h1>CODE FOR A CAUSE - RAISE FUNDS FOR EDUCATION</h1>
+            <h1>HACK FOR GOOD - RAISE FUNDS FOR EDUCATION</h1>
             <iframe width="956" height="537" src="https://www.youtube.com/embed/2HxryLi1Tdg" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
           </div>
         </div>
