--- a/index.html
+++ b/index.html
@@ -236,10 +236,8 @@
               by students says the teen founder <a href="https://www.linkedin.com/in/zacharythomasabraham">Zachary Thomas Abraham</a> 
               who is passionate about Teens in Technology. We will have free food, swag, goodies, and more! Our goal is to support diversity, 
               innovation, and technology among high school students.To Hack for Good we have partnered 
-              with <a href="http://www.shooting-stars-foundation.org">shooting stars foundation</a>,
-              a non-profit 501( c) (3) organization so additional funds raised can be donated for education for college students internationally. 
-              Shooting Stars foundation mobilizes school students across U.S to enable college education around the globe!<a href="http://www.shooting-stars-foundation.org/impact/">(Read More)</a>
-              
+              with Shooting stars foundation,a non-profit 501( c) (3) organization so additional funds raised can be donated for education for college students internationally. 
+              Shooting Stars foundation mobilizes school students across U.S to enable college education around the globe.
             </p>
           </div>
           <div class="col-md-4">
