--- a/index.html
+++ b/index.html
@@ -269,7 +269,7 @@
       <div class="container">
         <div class="row">
           <div class="col-12">
-            <h1>REGISTRATION CLOSED</h1>
+            <h1>REGISTERATION 2018- CLOSED</h1>
           </div>
         </div>
         <hr>
