--- a/index.html
+++ b/index.html
@@ -228,7 +228,7 @@
         <div class="row text-center">
           <div class="col-md-4">
             <h4 class="service-heading">Why TeenHacks?</h4>
-            <p> TeenHacks is a <b>charity high school civic hackathon</b> run by TeenHacks organization that will gather the innovators 
+            <p> TeenHacks is a <b>charity high school civic hackathon</b> run by TeenHacks, an organization of teens in technology that will gather the innovators 
               of tomorrow and make their ideas for a better community a reality. 
               For 12 hours, learn about new technology, talk to industry professionals, 
               meet up with friends, and make new ones. Participate in workshops, learn from speeches, 
