--- a/index.html
+++ b/index.html
@@ -488,8 +488,8 @@
 		<tr>
                   <td>10:00 AM</td>
                   <td><p> Workshop Begins! </p>
-	           <p> Workshop - Brainstorming project ideas 10:00 - 11:00 pm </p>
-                   <p> Workshop - Python and Machine learning  - 11:00 - 12:30 am </p>
+	           <!--<p> Workshop - Brainstorming project ideas 10:00 - 11:00 pm </p>
+                   <p> Workshop - Python and Machine learning  - 11:00 - 12:30 am </p>-->
 		   </td>
                 </tr>
                 <tr>
