--- a/index.html
+++ b/index.html
@@ -228,15 +228,15 @@
         <div class="row text-center">
           <div class="col-md-4">
             <h4 class="service-heading">Why TeenHacks?</h4>
-            <p> <b>TeenHacks is a charity high school civic hackathon by TeenHacks, an organization of teens in technology </b>that will gather the innovators 
+            <p> <b>TeenHacks is a charity high school civic hackathon by TeenHacks</b>, an organization of teens in technologyfounded by <a href="https://www.linkednin.com/zacharythomasabraham">Zachary Thomas Abraham</a>, that will gather the innovators 
               of tomorrow and make their ideas for a better community a reality. 
               For 12 hours, learn about new technology, talk to industry professionals, 
               meet up with friends, and make new ones. Participate in workshops, learn from speeches, 
               and work with mentors from companies.The event is completely free! TeenHacks is a high school hackathon in the Bay Area for students 
               by students says the TeenHacks founder <a href="https://www.linkedin.com/in/zacharythomasabraham">Zachary Thomas Abraham</a> 
               who is passionate about Teens in Technology. We will have free food, swag, goodies, and more! Our goal is to support diversity, 
-              innovation, and technology among high school students.TeenHacks mission is to partner with non-profits to Hack for Good. In 2018 Hack for Good partner is 
-              Shooting Stars foundation,a NPO that mobilizes school students across U.S to enable college education around the globe.
+              innovation, and technology among high school students.TeenHacks mission is to partner with non-profits to Hack for Good. In 2018 Hack for Good beneficiary is 
+              an educational foundation,a NPO that mobilizes school students across U.S to enable college education around the globe.
             </p>
           </div>
           <div class="col-md-4">
