--- a/index.html
+++ b/index.html
@@ -27,10 +27,10 @@
 
   <link href="assets/css/style.css" rel="stylesheet">
   <script src="assets/js/main.js"></script>
-  <title>TeenHacks</title>
-   <meta name="description" content="TeenHacks Hackathon: September 8 2018">
+  <title>TeenHacks℠</title>
+   <meta name="description" content="TeenHacks℠Hackathon: September 8 2018">
    <meta name="keywords" content="Hackathon,Code,Coding,Programming">
-   <meta name="author" content="TeenHacks">
+   <meta name="author" content="TeenHacks℠">
    <meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
 
@@ -47,7 +47,7 @@
   </div>
 
   <nav class="navbar navbar-expand-lg navbar-light bg-custom"><span class="corner-ribbon top-left sticky red shadow">High School</span>
-    <a class="navbar-brand" href="#"><i style="padding-left:3em;">TeenHacks</i></a>
+    <a class="navbar-brand" href="#"><i style="padding-left:3em;">TeenHacks℠</i></a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
   </button>
@@ -87,7 +87,7 @@
           <img src="assets/img/teenhackslogo-best.png" id="logo"></img>
         </div>
         <div id="date">
-          <h1>TEEN HACKS</h1>
+          <h1>TEEN HACKS℠</h1>
           <h2>CIVIC HACKATHON</h2>
           <h2>September - 8th, 2018</h2>
           <h3>NetScout Systems Inc.</h3>
@@ -101,8 +101,8 @@
 <script src="https://www.publicalbum.org/js/pa-embed-player.min.js" async></script>
 <div class="pa-embed-player" style="width:100%; height:480px; display:none;"
   data-link="https://photos.app.goo.gl/W8Md8pNeR8EjAMqYA"
-  data-title="TeenHacks18"
-  data-descrition="37 new photos · Album by TeenTech Hacks">
+  data-title="TeenHacks℠18"
+  data-descrition="37 new photos · Album by TeenHacks℠">
   <!-- 37 images -->
   <img data-src="https://lh3.googleusercontent.com/Y9CaAUlg9hwWOGVocyCese58kksE3EniDPGVC10tKHaR1y_uqe_QTfOQ6y8c7du4DnurH2sNIgmsD61QXELf8tpSwApdRGChr4G0XmhXr7sidVo-TefGaosil3k8XYpvpL-G_xB5lw=w3124-h1604" src="" alt="" />
   <img data-src="https://lh3.googleusercontent.com/Q9mCLaZVsHaMy1qqWGtZm8Tr6fvj7c6vE6Gi-Zru0zTCHXXV-a8nZjqqLLft0NHPZ5brfN2BC6RDRY7x2u6sIYtSXFbaitKGCF7vrF3U9norWQTZv6Txdax2yek0HmuVtzdaBB4Rig=w5312-h2988" src="" alt="" />
@@ -431,7 +431,7 @@
                 <div class="panel-body">
                      <h5><span class="label label-primary">Answer</span></h5>
 
-                    <p> Email us at <a class="link" href="mailto:teentechhacks@gmail.com">TeenHacks</a> if you have any additional questions. We are always happy to help! </p>
+                    <p> Email us at <a class="link" href="mailto:teentechhacks@gmail.com">TeenHacks℠</a> if you have any additional questions. We are always happy to help! </p>
                 </div>
             </div>
         </div>
@@ -446,7 +446,7 @@
                 <div class="panel-body">
                      <h5><span class="label label-primary">Answer</span></h5>
 
-                    <p> Email us at <a class="link" href="mailto:teentechhacks@gmail.com">TeenHacks</a>, we always are looking for sponsors! </p>
+                    <p> Email us at <a class="link" href="mailto:teentechhacks@gmail.com">TeenHacks℠</a>, we always are looking for sponsors! </p>
                 </div>
             </div>
         </div>
@@ -586,7 +586,7 @@
                   <h3>James Moy</h3>
                   <figcaption>Operations Team</figcaption>
                   <div class="medias">
-                    <a href="mailto:teenhacks@gmail.com" class="social"><i aria-hidden="true" class="fa fa-envelope"></i></a>
+                    <a href="mailto:teentechhacks@gmail.com" class="social"><i aria-hidden="true" class="fa fa-envelope"></i></a>
                   </div>
                 </figure>
               </div>
@@ -597,7 +597,7 @@
                   <h3>Adam Oushreovich</h3>
                   <figcaption>Outreach Team</figcaption>
                   <div class="medias">
-                    <a href="mailto:teenhacks@gmail.com" class="social"><i aria-hidden="true" class="fa fa-envelope"></i></a>
+                    <a href="mailto:teentechhacks@gmail.com" class="social"><i aria-hidden="true" class="fa fa-envelope"></i></a>
                   </div>
                 </figure>
               </div>
@@ -614,7 +614,7 @@
               </div>
                 <div class = "row" style = "padding-bottom: 20px">
                    <div class = "col-lg-12" style="color:black">
-                      Thank you to all of our volunteers! Without your help, TeenHacks wouldn't be possible.
+                      Thank you to all of our volunteers! Without your help, TeenHacks℠ wouldn't be possible.
                    </div>
                   <div class="clear"></div>
                     <div class = "col-lg-12" style = "text-align: center !important">
@@ -830,19 +830,21 @@
             </center>
             <br/>
             <center>
-               <div class="copyright"> &copy; TeenHacks</div>
+               <div class="copyright">
+                &copy; Copyright <strong>TeenHacks℠ by InternetDonkey,Inc</strong>. All Rights Reserved
+              </div>
             </center>
             <br>
          </div>
       </section>
     <footer class="footer">
       <div class="container">
-        <p>© TeenHacks 2018</p>
+        <p>©TeenHacks℠ 2018</p>
       </div>
     </footer>
   </div>
   <a id="mlh-trust-badge" style="display:block;max-width:100px;min-width:60px;position:fixed;right:25px;top:0;width:10%;z-index:500;display:none;" href="http://www.internetdonkey.com"
-    target="_blank"><img src="assets/img/teenhacksshooting.svg" alt="TeenHacking 2018 Hackathon" style="width:100%"></a>
+    target="_blank"><img src="assets/img/teenhacksshooting.svg" alt="TeenHacks℠ 2018 Hackathon" style="width:100%"></a>
 </body>
 
 </html>
