--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
           <h2>September - 8th, 2018</h2>
           <h3>NetScout Systems Inc.</h3>
           <p>178 E Tasman Dr, San Jose, CA 95134</p>
-	  <a href="https://www.facebook.com/teentechhacks" class="btn btn-default btn-lg"><i class="fa fa-eye fa-fw"></i> <span class="network-name">Thanks for coming to TeenHacks 2018. Follow our Facebook page for updates in 2019!</span></a>
+	  <a href="https://www.facebook.com/teentechhacks" class="btn btn-default btn-lg"><i class="fa fa-eye fa-fw"></i> <span class="network-name">Thanks for coming to TeenHacks℠ 2018 by InternetDonkey,Inc. Follow our Facebook page for updates in 2019!</span></a>
 	</div>
       </div>
     </section>
