--- a/index.html
+++ b/index.html
@@ -703,13 +703,7 @@
                   <figcaption>CTO, InternetDonkey,Inc</figcaption>
                 </figure>
               </div>
-	      <div class="col-sm-12 col-lg-4">
-                <figure>
-                  <img class="img-headshot" src="assets/img/headshots/speakersjudges/latha.jpg" />
-                  <h3>Latha Narayanan</h3>
-                  <figcaption>AVP, NetScout Systems & CEO, Shooting Stars Foundation,Inc</figcaption>
-                </figure>
-              </div>
+	    
 
 
             </div>
@@ -839,6 +833,7 @@
       </section>
     <footer class="footer">
       <div class="container">
+	      <p><a href="https://teenhacks.org/2018/" class="btn btn-default btn-lg"><i class="fa fa-eye fa-fw"></i> <span class="network-name" style="font-family: 'Montserrat', sans-serif;">2018</span></a></p>
         <p>©TeenHacks℠ 2018</p>
       </div>
     </footer>
