--- a/index.html
+++ b/index.html
@@ -201,16 +201,16 @@
         <div class="row">
           <div class="col-12">
             <h4>Prizes 2018 was awarded to the best five Civic Hacks</h4>
-		  <ul><li>The Best Overall Hack - I (<a href="https://teenhacks.hackerearth.com/sprints/teenhacks/dashboard/174610b/submission/">Grounded</a>)</li>
-			  <li>The Best Overall Hack - II (<a href="https://teenhacks.hackerearth.com/sprints/teenhacks/dashboard/558478c/submission/">Noma</a>)</li>
-			  <li>The Best Overall Hack - III (<a href="https://teenhacks.hackerearth.com/sprints/teenhacks/dashboard/1d8dc6e/submission/">Medifind</a>)</li>
-           <li>The Best Overall Hack - IV (<a href="https://teenhacks.hackerearth.com/sprints/teenhacks/dashboard/">UCSS</a>)</li> 
-	   <li>The Best Overall Hack - V (<a href="https://teenhacks.hackerearth.com/sprints/teenhacks/dashboard/0d0cdcf/submission/">REMEDI</a>)</li>
+		  <ul><li>The Best Overall Hack - I (Grounded)</li>
+			  <li>The Best Overall Hack - II (Noma)</li>
+			  <li>The Best Overall Hack - III (Medifind)</li>
+           <li>The Best Overall Hack - IV (UCSS)</li> 
+	   <li>The Best Overall Hack - V (REMEDI)</li>
             </ul>
             <h4>We also had special prizes for using a specific software tool.</h4>
             <h4>Special Prize</h4>
-            <ul><li>Internet Donkey Jungle in the humble Best Pitch award (<a href="https://teenhacks.hackerearth.com/sprints/teenhacks/dashboard/">UCSS</a>)</li>
-		    <li>The Best Civic Project on .tech site</li>
+            <ul><li>Internet Donkey Jungle in the humble Best Pitch award (UCSS)</li>
+		    <li>The Best Civic Project on .tech site (REMEDI)</li>
           <li>The Best Civic Project using Unity3d</li>
               <li>The Best Civic project using Hasura GraphQL Engine</li></ul>
        </div>
